trunk/Archive2/cc/3b85cdd809b5a4/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread -o main main.cpp
main.cpp: In function 'int main()':
main.cpp:7:34: error: too many initializers for 'std::tuple<>'
     std::tuple<> u{ std::move(t) };
                                  ^
main.cpp:7:18: warning: unused variable 'u' [-Wunused-variable]
     std::tuple<> u{ std::move(t) };
                  ^
