trunk/Archive2/cc/3b85cdd809b5a4/main.cpp
#include <tuple>
#include <utility>

int main()
{
    std::tuple<> t;
    std::tuple<> u{ std::move(t) };
}